--- a/package.json
+++ b/package.json
@@ -9,9 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.7.1",
+    "next": "14.0.1",
+    "next-auth": "^4.24.5",
     "react": "^18",
+    "react-carousel": "^4.3.0",
     "react-dom": "^18",
-    "next": "14.0.1"
+    "react-modal": "^3.16.1",
+    "react-redux": "^9.0.4",
+    "react-responsive-carousel": "^3.2.23",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
