--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@svgr/webpack": "^8.1.0",
+    "antd": "^5.13.2",
     "firebase": "^10.7.1",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
@@ -16,13 +18,11 @@
     "react-carousel": "^4.3.0",
     "react-dom": "^18",
     "react-modal": "^3.16.1",
+    "react-multi-carousel": "^2.8.4",
     "react-redux": "^9.0.4",
     "react-responsive-carousel": "^3.2.23",
-    "react-toastify": "^9.1.3"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.8",
+    "swiper": "^6.7.5"
   }
 }
