--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "antd": "^5.13.2",
+    "appwrite": "^13.0.1",
     "firebase": "^10.7.1",
     "next": "14.0.1",
     "next-auth": "^4.24.5",
